--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saitama",
+  "name": "Bobby",
   "version": "1.0.0",
   "description": "Saitama Hero Portfolio",
   "main": "index.js",
