--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bobby",
+  "name": "saitama",
   "version": "1.0.0",
   "description": "Saitama Hero Portfolio",
   "main": "index.js",
@@ -7,18 +7,10 @@
     "build": "webpack",
     "dev": "webpack serve --mode development"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/QSI-CS-Courses/saitama.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/QSI-CS-Courses/saitama/issues"
-  },
-  "homepage": "https://github.com/QSI-CS-Courses/saitama#readme",
   "devDependencies": {
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
